<resources>
    <string name="app_name">Placenote</string>
    <string name="action_battery_save">Battery saver</string>
    <string name="action_remove_places">Remove all places</string>
    <string name="action_remove_notes">Clear all notes</string>
    <string name="action_about">About</string>
    <string name="action_help">Usage / Help</string>
    <string name="action_email">Contact</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="info">Info</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy policy</string>

    <string name="help_header">Usage instructions.</string>
    <string name="help_content">At first you have to add at least one place in your placelist.\n
        Click the green plus button and locate this exact place.\n
        When your pin is at the desired position on the map,
        click the green button at the bottom of your screen,
        give it a name and save it.\n\n
        Then, you can click on this place in your placelist, and type a note.\n
        By clicking OK, you are all set.\n
        A notification will pop-up when you arrive at this particular place.
    </string>

    <string name="battery_saver_header">Battery saver mode.</string>
    <string name="battery_saver_content">By default, battery consumption is insignificant .
        But if you are an outdoor person, or you spend lots of hours on the move, it\'s not.
        So in that situation, battery saver mode(green battery heart icon) is ideal for you.\n\n
        The reason is that this app tries to get your location regularly, at a certain interval.
        With battery saver mode, this interval is increased, so the phone consumes less battery.
    </string>

    <string name="caution_header">Caution.</string>
    <string name="caution_content">This application uses location and internet services, in order to get information about your location and trigger a notification.\n
        Location settings on your device MUST be turned on.\n\n
        In cases like bad cellular data reception, or location fetching difficulties, notifications may be delayed (or even missed) after you arrive at a certain place.
        To resolve this, it is recommended to have your wifi turned on, even if you are not connected on a network.\n\n
        Have fun :D</string>

    <string name="add_new_place">Add a new place</string>
    <string name="no_places">Your placelist is empty.\n\nClick here or the plus button, and add your first place.</string>
    <string name="confirm_delete_places">Warning.\nAll places will be removed.\nAre you sure?</string>
    <string name="confirm_delete_all_notes">Warning.\nAll notes will be deleted.\nAre you sure?</string>
    <string name="confirm_delete_selected_notes">Selected notes will be deleted.\nAre you sure?</string>
    <string name="confirm_delete_note">Delete this note?</string>
    <string name="confirm_delete_place">Are you sure you want to remove %1$s ?</string>
    <string name="type_a_note_here">type a note here</string>
    <string name="place_name">Place name</string>
    <string name="note">Note</string>

    <string name="getting_location">Getting location..</string>
    <string name="maps_title">Map</string>
    <string name="map_search">Search</string>
    <string name="add_place">Add %1$s to your placelist</string>
    <string name="type_place_name">Type place name</string>
    <string name="place_exists">Place already exists</string>

    <string name="address_generator_error_message">Address unavailable.
        \nSlow Internet connection might be the issue.
    </string>
    <string name="bad_accuracy">Approximate location found
Check your location settings for better accuracy</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="email">vissarionas@gmail.com</string>

    <string name="battery_saver_on">battery saver enabled</string>
    <string name="battery_saver_off">battery saver disabled</string>

</resources>
