<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Danger zone">
        <menu>
            <item
                android:id="@+id/nav_remove_places"
                android:title="@string/action_remove_places"
                android:icon="@drawable/skull"/>
            <item
                android:id="@+id/nav_clear_notes"
                android:title="@string/action_remove_notes"
                android:icon="@drawable/warning"/>
        </menu>
    </item>



    <item android:title="@string/info">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:title="@string/help"
                android:icon="@drawable/help"/>
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy"
                android:icon="@drawable/privacy_policy"/>
        </menu>
    </item>

</menu>
