<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_text_viewer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.abubaca.viss.notepin.HelpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/help_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textSize="21sp"/>

            <TextView
                android:text="@string/help_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="17sp"
                android:lineSpacingExtra="5dp"/>

            <TextView
                android:text="@string/battery_saver_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textAlignment="center"
                android:textSize="21sp"/>

            <TextView
                android:text="@string/battery_saver_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="17sp"
                android:lineSpacingExtra="5dp"/>

            <TextView
                android:text="@string/caution_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:textAlignment="center"
                android:textSize="21sp"/>

            <TextView
                android:text="@string/caution_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="17sp"
                android:lineSpacingExtra="5dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
